Implement logout functionality in backend and frontend